# All-Downloader

./: LICENCE  README.md  RELEASE_SETUP_COMPLETE.md  main.py  pyproject.toml
.github/workflows/: release.yml
release/: README.md  build_all.py  build_android.py  build_web.py
src/ytdl/: __init__.py  main.py
src/ytdl/converters/: __init__.py  format_converter.py
src/ytdl/downloaders/: __init__.py  audio_downloader.py  batch_downloader.py  platform_manager.py  video_downloader.py
src/ytdl/gui/: __init__.py  app.py
src/ytdl/gui/pages/: __init__.py  audio_page.py  batch_page.py  converter_page.py  settings_page.py  video_page.py
src/ytdl/utils/: __init__.py  config.py  logger.py
