[project]
name = "ytdl"
version = "0.1.0"
description = "All-in-One Video/Audio Downloader GUI Application with support for multiple platforms and format conversion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "ffmpeg-python>=0.2.0",
    "flet[all]>=0.28.3",
    "mutagen>=1.47.0",
    "requests>=2.32.5",
    "spotipy>=2.25.1",
    "yt-dlp>=2025.8.27",
]

[project.scripts]
ytdl = "ytdl.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ytdl"]
